--- a/A2 Module/src/css/overrides.css
+++ b/A2 Module/src/css/overrides.css
@@ -2,9 +2,29 @@
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
+.contentgrid {
+    display: grid;
+    grid-template-columns: 2;
+    grid-auto-columns: min-content;
+    gap: 0px;
+    grid-auto-rows: min-content;
+}
+
+#para_one {
+    grid-column: 2;
+    grid-row: 1;
+}
+
 #BIG_THE {
+    grid-column: 1;
+    grid-row: 1;
+    display: flex;
+    flex-basis: 10px;
     background-image: url("../../assets/images/tree-of-death.jpg");
     width: 125px;
     height: 125px;
-    text-align: center;
+    align-items: center;
+    justify-content: center;
+    font-size: 75px;
+    color: whitesmoke;
 }
