--- a/A2 Module/src/css/overrides.css
+++ b/A2 Module/src/css/overrides.css
@@ -1,33 +1,57 @@
-.body {
+@import 'normalize.css';
+
+
+body {
     font-family: Georgia, 'Times New Roman', Times, serif;
+    border-style: solid;
+    border-width: 50px;
+    border-image: linear-gradient(180deg, crimson, black) 1;
+    padding: 35px;
+}
+
+#para-one {
+    display: inline-flex;
 }
 
 #big-T {
-    display: inline-flex;
     background-image: url("../../assets/images/tree-of-death.jpg");
+    justify-items: center;
     align-items: center;
+    text-align: center;
+    flex-shrink: 0;
     width: 125px;
     height: 125px;
-    margin: 0px;
-    justify-content: center;
+    margin-right: 10px;
     font-size: 75px;
     color: whitesmoke;
 }
 
-#para-one {
-    width: 82%;
-    display: inline-flex;
-    vertical-align: top;
-    flex-wrap: nowrap;
-}
-
 #para-two {
-    display: flexbox;
-    align-items: center;
-    justify-items: center;
+    min-height: 170px;
 }
 
 #comparison-img {
+    width: 500px;
+    height: 170px;
     float: right;
     margin: 0px 0px 0px 0px;
+}
+
+#xerxes {
+    width: 400px;
+    height: 211px;
+    margin-right: 10px;
+    float: left;
+}
+
+.quote-block {
+    margin: 25px 25px;
+}
+
+#cliff-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px;
+    height: 120px;
 }
