--- a/A2 Module/Part B/src/css/overrides.css
+++ b/A2 Module/Part B/src/css/overrides.css
@@ -1,60 +1,128 @@
 @import "normalize.css";
 
 img {
-  width: 100%;
+    width: 100%;
 }
 
-body {
-  font-family: Georgia, "Times New Roman", Times, serif;
-  border-style: solid;
-  border-width: 50px;
-  border-image: linear-gradient(180deg, crimson, black) 1;
-  padding: 35px;
+@font-face {
+    font-family: "Oxygen";
+    src: url(../../assets/fonts/Oxygen-Regular.ttf);
 }
 
-#red-num {
-  color: red;
+html {
+    background: url(../../assets/images/stormy-weather-background.jpg) no-repeat
+        center center fixed;
+    background-size: cover;
+    font-family: "Oxygen";
+    color: whitesmoke;
+    width: 100%;
+    height: 100%;
+    margin: 0;
 }
 
 header {
-  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
-    "Lucida Sans", Arial, sans-serif;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: inline-flex;
+    width: 100%;
+    justify-content: space-between;
 }
 
-#big-T {
-  float: left;
-  background-image: url("../../assets/images/tree-of-death.jpg");
-  margin: 0px 10px 0px 0px;
-  line-height: 125px;
-  width: 125px;
-  height: 125px;
-  text-align: center;
-  vertical-align: middle;
-  font-size: 75px;
-  color: whitesmoke;
+h1 {
+    margin: 0 0 0 0;
+    padding: 35px;
+    vertical-align: middle;
 }
 
-#para-two {
-  min-height: 170px;
+@font-face {
+    font-family: "icomoon";
+    src: url("../../assets/fonts/icomoon.eot?ektfmi");
+    src: url("../../assets/fonts/icomoon.eot?ektfmi#iefix")
+            format("embedded-opentype"),
+        url("../../assets/fonts/icomoon.ttf?ektfmi") format("truetype"),
+        url("../../assets/fonts/icomoon.woff?ektfmi") format("woff"),
+        url("../../assets/fonts/icomoon.svg?ektfmi#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+    font-display: block;
 }
 
-#comparison-img {
-  width: 500px;
-  height: 170px;
-  float: right;
-  margin: 0px 0px 0px 0px;
+.icon {
+    /* use !important to prevent issues with browser extensions that change fonts */
+    font-family: "icomoon" !important;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    display: inline-flex;
+    align-items: center;
+    font-size: xx-large;
+    opacity: 0.5;
+    padding: 30px;
+
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-#xerxes {
-  width: 400px;
-  height: 211px;
-  margin-right: 10px;
-  float: left;
+.computer {
+    opacity: 1;
 }
 
-#cliff-img {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
+@media only screen and (max-device-width: 767px) {
+    .phone {
+        opacity: 1;
+    }
+
+    .tablet {
+        opacity: 0.5;
+    }
+
+    .computer {
+        opacity: 0.5;
+    }
+}
+
+@media only screen and (min-device-width: 768px) {
+    .tablet {
+        opacity: 1;
+    }
+
+    .phone {
+        opacity: 0.5;
+    }
+
+    .computer {
+        opacity: 0.5;
+    }
+}
+
+@media only screen and (min-device-width: 1025px) {
+    .computer {
+        opacity: 1;
+    }
+
+    .phone {
+        opacity: 0.5;
+    }
+
+    .tablet {
+        opacity: 0.5;
+    }
+}
+
+.verse {
+    position: relative;
+    transform: translate(10vh, 10vh);
+    font-size: 2vmax;
+    height: fit-content;
+    width: 25vw;
+    background-color: rgba(0, 0, 0, 0.5);
+    padding: 3.5%;
+    border-style: double;
+    border-width: 7px;
+    border-color: white;
+}
+
+.part {
+    margin-top: 0;
 }
