--- a/A3 Module/src/css/overrides.css
+++ b/A3 Module/src/css/overrides.css
@@ -1,5 +1,70 @@
 @import "normalize.css";
+@import url("../../assets/fonts/fonts.css");
 
 img {
     width: 100%;
+}
+
+body {
+    background-color: black;
+    color: whitesmoke;
+    font-family: "museo_sans500", "museo_sans500_italic";
+    font-size: 1em;
+}
+
+header {
+    background-image: url("../../assets/images/mars.jpg");
+    background-size: 100% 80%;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: fit-content;
+    min-height: fit-content;
+}
+
+.headerpiece {
+    text-align: center;
+    vertical-align: middle;
+    min-width: fit-content;
+}
+
+h1 {
+    font-size: 3em;
+    margin-top: 10%;
+    margin-bottom: 10px;
+}
+
+h3 {
+    margin-top: 0;
+    font-size: 1.37em;
+    margin-bottom: 10%;
+}
+
+h4 {
+    margin: auto 30px;
+}
+
+section {
+    margin: auto 60px;
+}
+
+#aside_text {
+    font-size: 1.1em;
+    width: 20vw;
+    float: left;
+    border-top: 5px solid white;
+    border-bottom: 5px solid white;
+    padding: 30px 0px;
+    margin: 30px 30px;
+}
+
+#aside_img {
+    float: right;
+    font-size: 0.8em;
+    width: 20vw;
+    border-bottom: 5px solid white;
+    padding-bottom: 20px;
+    margin: 20px 25px;
 }
