--- a/A4 Module/Part A/src/views/index.html
+++ b/A4 Module/Part A/src/views/index.html
@@ -6,8 +6,8 @@
             name="viewport"
             content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
         />
-        <meta name="description" content="" />
-        <title></title>
+        <meta name="description" content="Mr. & Mrs. Smith Movie Review" />
+        <title>Mr. & Mrs. Smith Review</title>
         <link rel="stylesheet" href="../css/main.css" type="text/css" />
         <link
             rel="icon"
